--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,30 @@
 /.idea/libraries
 .DS_Store
 /build
+*.apk
+*.ap_
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Android Studio
+.idea/
+.gradle
+/*/local.properties
+/*/out
+/*/*/build
+/*/*/production
+*.iws
+*.ipr
+*~
+*.swp
+
+# Class to store the API key
+*Config.java
