--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,21 +7,35 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <application android:allowBackup="true"
-        android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher">
-
-        <service android:name=".BehanceMuzeiSource"
-            android:label="@string/source_name"
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name" >
+        <service
+            android:name=".BehanceMuzeiSource"
             android:description="@string/source_description"
-            android:icon="@drawable/ic_behancemuzei">
+            android:icon="@drawable/ic_behancemuzei"
+            android:label="@string/source_name" >
             <intent-filter>
                 <action android:name="com.google.android.apps.muzei.api.MuzeiArtSource" />
             </intent-filter>
-            <meta-data android:name="color"
+
+            <meta-data
+                android:name="color"
                 android:value="#aff" />
+
+            <meta-data
+                android:name="settingsActivity"
+                android:value=".SettingsActivity" />
         </service>
 
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_settings"
+            android:windowSoftInputMode="adjustNothing"
+            android:theme="@style/Theme.Behance.Settings"
+            android:exported="true" >
+        </activity>
     </application>
 
 </manifest>
