Share and Download options added
- Added custom actions to Download or Share the current wallpaper image
- minSdkVersion reduced to 17 to include Jellybean compatibility

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,13 @@
             android:theme="@style/Theme.Behance.Settings"
             android:exported="true" >
         </activity>
+
+        <receiver
+            android:name=".DownloadReceiver" >
+            <intent-filter>
+                <action android:name="com.varuncjain.behancemuzei.Download" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
